[package]
name = "yvonne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
# qrcode = "0.11"
genpdf = "0.2.0"
image = "*"
imageproc = "0.23.0"
qrcode-generator = "4.1.7"
rusttype = "0.9.3"
lazy_static = "*"
lopdf = "0.29.0"
printpdf = {version = "0.5.3", features = ["embedded_images"]}
anyhow = "*"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units=1
